remove: filter condition-proSmallItem
